--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>HireBright - HR tool for interviewing Software Engineers</title>
+  <title>HireBright - {% block title %}HR tool for interviewing Software Engineers{% endblock %}</title>
 </head>
 
 <body>
