Minor test mode changes

--- a/templates/application.html
+++ b/templates/application.html
@@ -37,6 +37,6 @@
         <input type="file" name="attachedfile" maxlength=50 allow="text/*">
     </label>
     <br>
-    <input type="submit">
+    <input type="submit" value="Submit">
 </form>
 {% endblock %}
