--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -4,7 +4,7 @@
 
     <h2>Sign Up</h2>
     <p>Are you an HR? Then sign up here using you secret key:</p><br>
-   <form action="/sign-up" method="POST">
+   <form action="/signup" method="POST">
     <label>Username
       <input type="email" name="email"> *
     </label><br>
@@ -12,10 +12,22 @@
       <input type="password" name="password"> *
     </label><br>
     <label>Secret key
-      <input type="text" name="secretkey"> 
+      <input type="text" name="secretkey"> *
+    </label><br>
+    <label>First Name
+      <input type="text" name="first_name"> *
+    </label><br>
+    <label>Last Name
+      <input type="text" name="last_name"> * 
+    </label><br>
+    <label>Title
+      <input type="text" name="title"> 
+    </label><br>
+    <label>Phone Number
+      <input type="text" name="phone"> 
     </label><br>
     <input type="submit" value="Submit">
   </form>
   <br>
-  <p>If you are applicant, submit your application here and we'll contact you!</p>
+  <p>If you are applicant, submit your application <a href="/submit-application">here</a> and we'll contact you!</p>
 {% endblock %}
