--- a/templates/data.html
+++ b/templates/data.html
@@ -4,4 +4,14 @@
 
     <h2>Resume Data</h2>
 
+{% if users %}
+<ul>
+{% for user in users %}
+<li>
+    <a href="/users/{{ user.user_id }}">{{ user.first_name }} {{ user.last_name }}</a>
+</li>
+{% endfor %}
+</ul>
+{% endif %}
+
 {% endblock %}
