--- a/templates/status.html
+++ b/templates/status.html
@@ -12,8 +12,12 @@
 <label>Salary: <div id="salary">{{ user.salary }}</div></label>
 <label>Github: <div id='github'>{{ user.github }}</div></label>
 <label>Desired position: <div id='position'>{{ user.position }}</div></label>
+<label>Submission date: <div id='date'>{{ user.time_of_submission }}</div></label>
 <br>
-Status: {{ user.interview }} <br>
+Status: {{ interview.status.status_name }} <br>
+{% if interview.link_id %}
+Link: {{ interview.tool.link }} <br>
+{% endif %}
 Resume: <br>{{ user.resume.resume_text }}
 
 {% endif %}
