--- a/templates/tool.html
+++ b/templates/tool.html
@@ -4,7 +4,6 @@
     <!-- <link href="stylesheets/style.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/styles/default.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
-
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.1.min.js">
     </script><script type="text/javascript" src="socket.io.js"></script>
     <script>    
@@ -68,7 +67,6 @@ $(function () {
       socket.emit('user message', $('#tool').html());
       $('#lines').get(0).scrollTop = 10000000;
       return false;
-      
     });
 
     function clear () {
@@ -76,10 +74,7 @@ $(function () {
     };
 });
     </script>
-
-    <script>hljs.initHighlightingOnLoad();</script>
-
-
+    <!-- <script>hljs.initHighlightingOnLoad();</script> -->
   </head>
 <body>
   <div id="chat">
@@ -99,14 +94,10 @@ $(function () {
     </div>
     
   </div>
+<!--   <div> -->
 <pre><code class="python">
-    <div  id="tool" name="tool" contentEditable="true">def test_highlight(a, b):<br>
-        import random
-        for i in range(10):
-            print "This should increment i", i
-        sum = a + b
-        return "This should highlight syntax"
-    </div>
+    <div id="tool" name="tool" contentEditable="true">Code here</div>
 </code></pre>
+<!--   </div> -->
 </body>
 </html>
