--- a/templates/user.html
+++ b/templates/user.html
@@ -15,9 +15,55 @@
 <label>Github: <div id='github'>{{ user.github }}</div></label>
 <label>Desired position: <div id='position'>{{ user.position }}</div></label>
 <br>
-Status: {{ user.interview }} <br>
-Resume: <br>{{ user.resume.resume_text }}
+Status: {{ interview.status.status_name }} <br>
+<!-- This code shows interview status or calendar to schedule interview -->
+{% if interview.interview_date %}
+Interview date:
+Interviewer:
+Link to tool: 
+
+{% else %}
+Schedule interview <br>
+
+Choose Interviewer: 
+<form action="" >
+  <select name="interviewers">
+    {% for recruiter in recruiters %}
+    <option value="{{ recruiter.recruiter_id}}">{{ recruiter.first_name }} {{ recruiter.last_name }}</option>
+    {% endfor %}
+  </select>
+
+  <br><br>
+    <p>Date: <input type="text" id="calendar" /></p><br>
+  <input type="submit">
+</form>
+{% endif %}
+Resume: <br> <div id="resume"> {{ user.resume.resume_text }}</div>
 
 {% endif %}
+<script>
+function changeInterviewData(results) {
+    var status = results;
+
+    console.log("Finished replaceStatus");
+}
+
+function updateInterview(evt) {
+    evt.preventDefault();
+    var recr_id = $( "select option:selected" ).val()
+    var date = $('#calendar').val()
+    data = {'interview_date': date, 'recrcuiter_id': recr_id}
+    $.post('/schedule_interview', data, changeInterviewData);
+    console.log(recr_id, date)
+    console.log("Finished sending AJAX");
+}
+</script>
+<script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
+
+<script>   
+    $(function() {
+         $( "#calendar" ).datepicker();   
+    }); 
+</script>
 
 {% endblock %}
