Working and styled users/data

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-    <!-- <link href="style.css" rel="stylesheet"> -->
+    <link href="/styles.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HireBright - {% block title %}HR tool for interviewing Software Engineers{% endblock %}</title>
   <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
