--- a/templates/application.html
+++ b/templates/application.html
@@ -1,51 +1,61 @@
 {% extends 'base.html' %} {% block title %} Submit your application {% endblock %} {% block content %}
 
 <form action="submit-application" method="POST" enctype="multipart/form-data">
-    <label>First Name
+    <div class="form-group">
+    <label>First Name</label>
         <input type="text" name="first_name"> *
-    </label>
-    <br>
+    </div>
+    <div class="form-group">
     <label>Last Name
         <input type="text" name="last_name"> *
     </label>
-    <br>
+    </div>
+    <div class="form-group">
     <label>Email
         <input type="email" name="email"> *
     </label>
-    <br>
-    <label>PAssword
+    </div>
+    <div class="form-group">
+    <label>Password
         <input type="password" name="password"> *
     </label>
-    <br>
+    </div>
+    <div class="form-group">
     <label>Phone number
         <input type="text" name="phone"> *
     </label>
-        <br>
+    </div>
+    <div class="form-group">
     <label>Location
         <input type="text" name="location">
     </label>
-    <br>
+    </div>
+    <div class="form-group">
     <label>Linkedin
         <input type="text" name="linkedin">
     </label>
-    <br>
+    </div>
+    <div class="form-group">
     <label>Github login
         <input type="text" name="github">
     </label>
-    <br>
+    </div>
+    <div class="form-group">
     <label>Desired position
         <input type="text" name="position">
     </label>
-    <br>
+    </div>
+    <div class="form-group">
     <label>Salary
         <input type="text" name="salary">
     </label>
-    <br>
+    </div>
+    <div class="form-group">
     <label>Attach resume:
         <input type="file" name="file">
     </label>
-    <br>
-    <input type="submit" value="Submit">
+    </div>
+    <input type="submit" value="Submit" class="btn btn-default">
 </form>
 
 {% endblock %}
