--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <link href="/styles.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HireBright - {% block title %}HR tool for interviewing Software Engineers{% endblock %}</title>
+  {% block morehead %}{% endblock %}
   <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
 </head>
 
