--- a/templates/search.html
+++ b/templates/search.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %} Search {% endblock %}
 {% block content %}
 
 <h1>Search for candidate</h1>
@@ -33,7 +34,7 @@ function searchQuery(evt) {
             var keys = Object.keys(result);
             $('.results').append(keys.length + ' results was found');
             for (var i=0; i < keys.length; i++) {
-                $('.results').append("<div id="+ keys[i] +">"+ (i+1) +": ");
+                $('.results').append("<div id="+ keys[i] +" class='search-result'>"+ (i+1) +": ");
                 console.log(result[keys[i]].user)
                 $('#'+keys[i]).append('Name: ' + result[keys[i]].user + '<br /> Email: ' + result[keys[i]].email + '<br />');
                 
