show_user_data receives json from GitHub, need to convert to dict

--- a/templates/user.html
+++ b/templates/user.html
@@ -64,7 +64,13 @@
                 <input type="submit">
             </form>
         
+
         {% endif %} 
+            
+            <div id="github_data">GitHub: {{ github_data }}
+
+            </div>
+            
         </div>
         <div class="col-xs-12 col-md-8">
             <h3>Resume:</h3>
