--- a/templates/status.html
+++ b/templates/status.html
@@ -4,39 +4,23 @@
     <div class="row">
         <div class="col-xs-12 col-md-4">
             <h3>Profile</h3>
-            <label>First name:
-                <div id="name">{{ user.first_name }}</div>
-            </label>&nbsp
-            <label>Last Name:
-                <div id='lname'>{{ user.last_name }}</div>
-            </label>&nbsp
-            <label>Email:
-                <div id='email'>{{ user.email }}</div>
-            </label>&nbsp
-            <label>Location:
-                <div id='location'>{{ user.location }}</div>
-            </label>&nbsp
-            <label>Phone number:
-                <div id='phone'>{{ user.phone }}</div>
-            </label>&nbsp
-            <label>Linkedin:
-                <div id='linkedin'>{{ user.linkedin }}</div>
-            </label>&nbsp
-            <label>Salary:
-                <div id="salary">{{ user.salary }}</div>
-            </label>
-            <label>Github:
-                <div id='github'>{{ user.github }}</div>
-            </label>
-            <label>Desired position:
-                <div id='position'>{{ user.position }}</div>
-            </label>
-            <label>Submission date:
-                <div id='date'>{{ user.time_of_submission }}</div>
-            </label>
-            <br> Status: {{ interview.status.status_name }}
-            <br> {% if interview.link_id %} Link: {{ interview.tool.link }}
-            <br> {% endif %}
+            <table>
+                <tr><td>First name:</td><td><div id="name">{{ user.first_name }}</div></td></tr>
+                <tr><td>Last Name:</td><td><div id='lname'>{{ user.last_name }}</div></td></tr>
+                <tr><td>Email:</td><td><div id='email'>{{ user.email }}</div></td></tr>
+                <tr><td>Location:</td><td><div id='location'>{{ user.location }}</div></td></tr>
+                <tr><td>Phone number:</td><td><div id='phone'>{{ user.phone }}</div></td></tr>
+                <tr><td>Linkedin:</td><td><div id='linkedin'>{{ user.linkedin }}</div></td></tr>
+                <tr><td>Salary:</td><td><div id="salary">${{ user.salary }}</div></td></tr>
+                <tr><td>Github:</td><td><div id='github'>{{ user.github }}</div></td></tr>
+                <tr><td>Desired position:</td><td><div id='position'>{{ user.position }}</div></td></tr>
+                <tr><td>Submission date:</td><td><div id='date'>{{ user.time_of_submission }}</div></td></tr>
+                <tr><td>Status: </td><td>{{ interview.status.status_name }}</td></tr>
+                {% if interview.link_id %} 
+                <tr><td>Link: </td><td>{{ interview.tool.link }}</td></tr>
+                {% endif %}
+
+            </table>
         </div>
         <div class="col-xs-12 col-md-8">
             <h3>Resume:</h3>
